[package]
name = "bevy_hex_coords"
description = "Hexagonal coordinate utilities for the Bevy game engine."
repository = "https://tangled.org/did:plc:pw2qvlzzgblxvnpuq7umcltx"
license = "Apache-2.0 OR MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.18.1"
bevy_derive = "0.18.1"
bevy_ecs = "0.18.1"
bevy_math = "0.18.1"
bevy_transform = "0.18.1"

[dev-dependencies]
bevy = "0.18.1"
